v4.9.0/_sources/generated/pcdsdevices.beam_stats.BeamEnergyRequest.rst.txt
pcdsdevices.beam\_stats.BeamEnergyRequest
=========================================

.. currentmodule:: pcdsdevices.beam_stats

.. autoclass:: BeamEnergyRequest

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - done
          - :class:`~pcdsdevices.signal.InternalSignal`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.pv_positioner.PVPositionerDone`
    
        * - setpoint
          - :class:`~ophyd.signal.EpicsSignal`
          - ``:USER:MCC:EPHOT``
          - 
          - hinted
          - 
    

    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: end_monitor_thread
    .. automethod:: get
    .. automethod:: move
    .. automethod:: mv
    .. automethod:: mv_ginput
    .. automethod:: mvr
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: set
    .. automethod:: set_position
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: tweak
    .. automethod:: umv
    .. automethod:: umvr
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: actuate
    .. autoattribute:: actuate_value
    .. autoattribute:: atol
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: done_value
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: position
    .. autoattribute:: put_complete
    .. autoattribute:: readback
    .. autoattribute:: settle_time
    .. autoattribute:: stop_signal
    .. autoattribute:: stop_value
    .. autoattribute:: timeout
    
    